:wheelchair: Fix HTML heading jumps

--- a/frontend/src/sass/main.scss
+++ b/frontend/src/sass/main.scss
@@ -20,12 +20,6 @@ body, html {
     -webkit-tap-highlight-color: fade-out(white, .8);
 }
 
-h1, h2, h3, h4, h5, h6 {
-    margin: 0 0 35px;
-
-    letter-spacing: 1px;
-}
-
 p {
     margin: 0 0 25px;
 
